--- a/src/webapp/views/user-page/style.css
+++ b/src/webapp/views/user-page/style.css
@@ -344,121 +344,8 @@ li {
     position: relative;
 }
 
-.cart_box {
-    position: absolute;
-    top: calc(100% + 15px);
-    right: 0;
-    width: 600px;
-    min-height: 100px;
-    border-radius: 4px;
-    background-color: var(--white-color);
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    z-index: 100;
-    padding: 10px;
-    animation: grow-up 0.2s ease-in;
-    transform-origin: calc(100% - 160px/2) top;
-}
 
-.cart_box::before {
-    content: "";
-    position: absolute;
-    top: -10px;
-    right: calc(160px / 2);
-    transform: translateX(50%);
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid var(--white-color);
-}
 
-.cart_box-hide {
-    display: none;
-}
-
-.cart_list {
-    max-height: 376px;
-    overflow-y: auto;
-}
-
-.cart_items {
-    display: flex;
-    margin-bottom: 8px;
-}
-
-.cart_items-img {
-    aspect-ratio: 1;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 120px;
-    height: 120px;
-}
-
-.cart_items-body {
-    flex-grow: 1;
-    display: grid;
-    grid-template-columns: 1.5fr 1fr 1.5fr 0.5fr;
-    align-items: center;
-    margin-left: 20px;
-}
-
-.cart_item-info {
-    font-size: 1.6rem;
-    text-align: left;
-}
-
-.cart_items-name {
-    margin-bottom: 8px;
-    line-height: 1.8rem;
-    height: calc(1.8rem * 2);
-    /* chrome version */
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.cart_items-price {
-    color: var(--theme-color);
-}
-.cart_items-quantity {
-    color: var(--text-color);
-    font-size: 1.6rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.cart_items-total {
-    font-size: 1.6rem;
-    color: var(--theme-color);
-}
-
-.cart_items-trash {
-    font-size: 1.8rem;
-}
-
-.cart_nofi {
-    font-size: 1.5rem;
-    color: var(--text-color);
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-.cart_confirm-btn {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    color: var(--white-color);
-    background-color: var(--theme-color);
-    border-radius: 3px;
-    height: 30px;
-    width: 160px;
-    padding: 5px 8px;
-}
-
-.cart_confirm-btn:hover {
-    cursor: pointer;
-    opacity: 0.6;
-}
 
 .app_container {
     /* padding-top: calc(var(--header-height) + 24px); */
@@ -1561,4 +1448,105 @@ li {
     background-color: #ff7263;
     border-color: var(--theme-color) !important;
     color: var(--white-color);
+}
+
+/* Cart  */
+.order-details {
+    flex-direction: column;
+    background: #fff;
+    padding: 25px 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 #80808012;
+    height: 400px;
+    overflow-y: scroll;
+    width: 100%;
+    align-items: center;
+}
+.order-row{
+    border-bottom: 1px solid #7d5fff26;
+    padding: 18px 10px;
+    width: 100%;
+}
+.order-row-left {
+    flex-basis: 45%;
+    gap: 5%;
+}
+.order-row-img {
+    flex-basis: 20%;
+    background: whitesmoke;
+    justify-content: center;
+    border-radius: 5px;
+    padding: 10px 0px;
+}
+.order-row-img img {
+    width: 85%;
+}
+.order-row-name {
+    flex-basis: 70%;
+    gap: 7px;
+    font-size: 14px;
+    justify-content: flex-start;
+}
+.order-row-right {
+    flex-basis: 55%;
+    align-items: center;
+    gap: 30px;
+}
+.order-right-price {
+    gap: 10px;
+    flex-basis: 37%;
+    justify-content: flex-start;
+    font-size: 15px;
+}
+.order-right-quantity {
+    color: #111;
+    gap: 10px;
+    flex-basis: 30%;
+    align-items: center;
+    margin-left: 40px;
+    margin-bottom: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+.quantity-details, .row-details-items-quantity-details {
+    position: relative;
+}
+.quantity-details span {
+    min-width: 56px;
+    height: 30px;
+    outline: none;
+    padding: 0px 10px;
+    border: 1px solid #7d5fff;
+    border-radius: 4px;
+    color: #7d5fff;
+    font-weight: 500;
+    line-height: 28px;
+}
+.quantity-navigation {
+    flex-direction: column;
+    position: absolute;
+    right: 3px;
+    top: 1px;
+    font-size: 14px;
+    cursor: pointer;
+}
+.order-right-remove {
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    box-shadow: 0 0 5px 0 #80808038;
+    color: #7d5fff;
+    font-size: 20px;
+    min-width: 30px;
+}   
+.cart-container{
+    justify-content: center;
+}
+.cart-container div {
+    display: flex;
+    align-items: center;
 }
