--- a/src/webapp/views/admin/admin_page.css
+++ b/src/webapp/views/admin/admin_page.css
@@ -89,7 +89,8 @@
 
 .product_delete_btn,
 .product_update_btn,
-.variantAttribute_del_btn {
+.variantAttribute_del_btn,
+.attributeValue_del_btn {
     font-size: 1.8rem;
     cursor: pointer;
 }
@@ -159,6 +160,73 @@
     height: 35px;
 }
 
+/* ====== CUSTOM ======== */
+
+.background-grey {
+    background-color: #a7a5a5 !important;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 36px;
+    height: 20px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(16px);
+    -ms-transform: translateX(16px);
+    transform: translateX(16px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
 
 /* ========================== */
 
@@ -176,7 +244,7 @@
 
 
 /* ========================================= */
-
+/* 
 .attribute_delete_btn,
 .attribute_update_btn {
     font-size: 1.8rem;
@@ -209,4 +277,4 @@
 
 .attribute_modal_hide {
     display: none;
-}
+} */
