--- a/src/webapp/views/login/login.css
+++ b/src/webapp/views/login/login.css
@@ -9,16 +9,19 @@ body {
 }
 
 .alert-banner {
-    width: 300px;
-    margin-top: 100px;
+    width: 320px;
     font-size: 1.8rem;
+    position: absolute;
+    top: 110px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .form-contain {
     position: relative;
     height: 540px;
     width: 330px;
-    margin-top: 140px;
+    margin-top: 150px;
     margin-bottom: 30px;
 }
 
