--- a/src/webapp/views/user-page/style.css
+++ b/src/webapp/views/user-page/style.css
@@ -20,6 +20,16 @@ html {
     --header-height: 120px;
     --header_nav-height: 30px;
     --header_search-height: calc(var(--header-height) - var(--header_nav-height));
+    /* override bootstrap variables */
+    --bs-pagination-font-size: 1.8rem;
+    --bs-pagination-color: var(--text-color);
+    --bs-pagination-border-color: var(--black-color);
+    --bs-pagination-hover-color: var(--theme-color);
+    --bs-pagination-hover-border-color: var(--theme-color);
+    --bs-pagination-active-bg: var(--theme-color);
+    --bs-pagination-active-color: var(--white-color);
+    --bs-pagination-active-border-color: var(--black-color);
+    /* override bootstrap variables */
 }
 
 /* ----------------------------- */
@@ -1269,7 +1279,10 @@ li {
 /* --------------------------- */
 
 
-.mySlides {display:none;}
+.mySlides {
+    display:none;
+    aspect-ratio: 2.25;
+}
 
 .Slides-content {
     position: relative;
@@ -1436,16 +1449,17 @@ li {
     margin-right: 24px;
     padding: 6px;
     cursor: pointer;
+    font-size: 1.4rem;
 }
 
 .variants_list>div:hover {
-    background-color: var(--theme-color);
+    background-color: #ff7263;
     border-color: var(--white-color);
     color: var(--white-color);
 }
 
 .variant_item_box-active {
-    background-color: #ff7263;
+    background-color: var(--theme-color);
     border-color: var(--theme-color) !important;
     color: var(--white-color);
 }
@@ -1458,7 +1472,7 @@ li {
     margin-top: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px 0 #80808012;
-    height: 400px;
+    height: 450px;
     overflow-y: scroll;
     width: 100%;
     align-items: center;
@@ -1549,4 +1563,36 @@ li {
 .cart-container div {
     display: flex;
     align-items: center;
+}
+
+#total_cart_item {
+    font-size: 1.8rem;
+    color: var(--white-color);
+}
+
+#payment-infor-modal .modal-body{
+    padding: 1.6rem;
+}
+
+#payment-infor-modal button[type="submit"]{
+    margin-top: 16px;
+}
+
+#payment_modal_total_price {
+    font-size: 2rem;
+    justify-self: center;
+}
+
+.table-fixed{
+    max-height: 390px !important;
+    overflow-y: auto;
+}
+
+.table-fixed .fixed-thead {
+    position: sticky;
+    top: 0;
+}
+
+.hide {
+    display: none;
 }
