--- a/src/webapp/views/admin/admin_page.css
+++ b/src/webapp/views/admin/admin_page.css
@@ -30,7 +30,6 @@
 .category_delelte_btn:hover,
 .category_update_btn:hover {
     cursor: pointer;
-    font-size: 2.1rem;
     color: var(--theme-color);
 }
 
@@ -121,6 +120,10 @@
     background-color: #69C9BC;
     color: var(--white-color);
 }
+.orderNote_list {
+    max-height: 200px;
+    overflow-y: scroll;
+}
 
 
 /* ============================ */
@@ -148,7 +151,6 @@
 .account_delete_btn:hover,
 .account_update_btn:hover {
     cursor: pointer;
-    font-size: 2.1rem;
     color: var(--theme-color);
 }
 
